--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -67,5 +67,8 @@
                 href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a></p>
     </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="../script/menu.js"></script>
+<link rel="stylesheet" href="../script/menu.css">
 
 </html>
