--- a/lab_work/Lab1.2/lab1.2.html
+++ b/lab_work/Lab1.2/lab1.2.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="lab1.1.css">
+    <link rel="stylesheet" href="lab1.2.css">
     <script src=""></script>
 </head>
 
@@ -41,14 +41,7 @@
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
     </ul>
 
-    <p>In summary, the COVID-19 pandemic left an indelible mark on pet ownership. The companionship and comfort pets
-        provided during a time of unprecedented isolation offered much-needed emotional support to many. However, this
-        surge in pet ownership also brought with it new challenges, from financial considerations to the
-        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these animals
-        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis. These
-        connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
-        circumstances.</p>
-    <p>
+
     <p>
         <button class="button1"
             onclick="show('images/2019.png', 'Fig 1. Percent of most popular pets owned by Australians in 2019', '2019')">2019</button>
@@ -56,7 +49,6 @@
             onclick="show('images/2021.png', 'Fig 1. Percent of most popular pets owned by Australians in 2021', '2021')">2021</button>
         <button class="button3"
             onclick="show('images/Both.png', 'Fig 1. Percent of most popular pets owned by Australians in 2019 and 2021', 'Both')">Both</button>
-    </p>
     </p>
     <figure id="ChartImg" ; display:none">
         <img id="ChartImgSrc" src="" alt="">
@@ -70,14 +62,20 @@
             document.getElementById('ChartImg').style.display = 'block';
         }
     </script>
+    <p>In summary, the COVID-19 pandemic left an indelible mark on pet ownership. The companionship and comfort pets
+        provided during a time of unprecedented isolation offered much-needed emotional support to many. However, this
+        surge in pet ownership also brought with it new challenges, from financial considerations to the
+        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these animals
+        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis. These
+        connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
+        circumstances.</p>
     <footer>
-        <p id="subject">COS30045 Data Visualization</p>
-        <p>Authored by SHIN THANT THI RI |<a
-                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a></p>
+        <p>COS30045 Data Visualization</p>
+        <p>Authored by SHIN THANT THI RI <a
+                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
+        </p>
     </footer>
+
 </body>
-<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="../script/menu.js"></script>
-<link rel="stylesheet" href="../script/menu.css">
 
 </html>
