--- a/lab_work/Lab1.2/lab1.2.html
+++ b/lab_work/Lab1.2/lab1.2.html
@@ -71,7 +71,7 @@
         circumstances.</p>
     <footer>
         <p>COS30045 Data Visualization</p>
-        <p>Authored by SHIN THANT THI RI <a
+        <p>Authored by SHIN THANT THI RI | <a
                 href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
         </p>
     </footer>
