--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -62,9 +62,10 @@
     </figcaption>
 
     <footer>
-        <p id="subject">COS30045 Data Visualization</p>
-        <p>Authored by SHIN THANT THI RI |<a
-                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a></p>
+        <p>COS30045 Data Visualization</p>
+        <p>Authored by SHIN THANT THI RI | <a
+                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
+        </p>
     </footer>
 </body>
 
