--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -4,17 +4,17 @@
 <head>
     <title>LAB 1.1 HTML and CSS Review</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Lab 1.1" />
+    <meta name="description" content="LAB 1.2 JavaScript" />
     <meta name="author" content="SHIN THANT THI RI">
     <meta name="keywords" content="HTML, CSS" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="lab1.1.css">
+    <link rel="stylesheet" href="lab1.2.css">
     <script src=""></script>
 </head>
 
 <body>
-    <h1 id="labno">Lab 1.1</h1>
+    <h1 id="labno">LAB 1.2 JavaScript</h1>
     <h1>Title of Article about pet ownership during the COVID Pandemic</h1>
     <h2>Author: Shin Thant Thi Ri </h2>
 
@@ -40,17 +40,9 @@
         <li>Routine adjustments: Managing work and pet care required new time management strategies.</li>
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
     </ul>
-
-    <p>In summary, the COVID-19 pandemic left an indelible mark on pet ownership. The companionship and comfort pets
-        provided during a time of unprecedented isolation offered much-needed emotional support to many. However, this
-        surge in pet ownership also brought with it new challenges, from financial considerations to the
-        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these animals
-        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis. These
-        connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
-        circumstances.</p>
-    <figure>
-        <img src="images/pet_ownershiptable.png" width="500" height="300"
-            alt="Comparison of pet ownership in 2019 and 2021.">
+    <figure></figure>
+    <img src="images/pet_ownershiptable.png" width="500" height="300"
+        alt="Comparison of pet ownership in 2019 and 2021.">
     </figure>
 
     <figcaption id="caption_chart">
@@ -61,12 +53,21 @@
             Animal Medicines Australia Report 2021</a>
     </figcaption>
 
+    <p>In summary, the COVID-19 pandemic left an indelible mark on pet ownership. The companionship and comfort pets
+        provided during a time of unprecedented isolation offered much-needed emotional support to many. However, this
+        surge in pet ownership also brought with it new challenges, from financial considerations to the
+        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these animals
+        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis. These
+        connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
+        circumstances.
+    </p>
     <footer>
         <p>COS30045 Data Visualization</p>
         <p>Authored by SHIN THANT THI RI | <a
                 href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
         </p>
     </footer>
+
 </body>
 
 </html>
