--- a/lab_work/Lab1.2/lab1.2.html
+++ b/lab_work/Lab1.2/lab1.2.html
@@ -41,7 +41,6 @@
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
     </ul>
 
-
     <p>
         <button class="button1"
             onclick="show('images/2019.png', 'Fig 1. Percent of most popular pets owned by Australians in 2019', '2019')">2019</button>
@@ -68,7 +67,8 @@
         responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these animals
         will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis. These
         connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
-        circumstances.</p>
+        circumstances.
+    </p>
     <footer>
         <p>COS30045 Data Visualization</p>
         <p>Authored by SHIN THANT THI RI | <a
