--- a/lab_work/Lab1.2/lab1.2.html
+++ b/lab_work/Lab1.2/lab1.2.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
+    <!-- Heading Level -->
     <h1 id="labno">LAB 1.2 JavaScript</h1>
     <h1>Title of Article about pet ownership during the COVID Pandemic</h1>
     <h2>Author: Shin Thant Thi Ri </h2>
 
+    <!-- Paragraph -->
     <p>The COVID-19 pandemic not only reshaped daily life but also significantly influenced pet ownership trends in
         Australia. As more people spent time at home, the desire for companionship led to a noticeable increase in pet
         ownership across various types, particularly <strong><em>dogs</em></strong> and <strong><em>cats</em></strong>.
@@ -33,14 +35,14 @@
         households.</p>
 
     <h4>Here are some of the key aspects of pet ownership during the pandemic:</h4>
-    <ul>
+    <!-- Ordered List -->
+    <ol type="1">
         <li>Mental health boost: Pets offered emotional support and reduced loneliness.</li>
         <li>More exercise: Regular walks and playtime kept people active.</li>
         <li>Financial impact: Pet care expenses became a new budget item.</li>
         <li>Routine adjustments: Managing work and pet care required new time management strategies.</li>
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
-    </ul>
-
+    </ol>
     <p>
         <button class="button1"
             onclick="show('images/2019.png', 'Fig 1. Percent of most popular pets owned by Australians in 2019', '2019')">2019</button>
