--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -9,46 +9,62 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="lab1.2.css">
-    <script src=""></script>
+    <link rel="stylesheet" href="lab1.1.css">
+    <nav id="nav-block">
+        <a class="menu-button"
+            href="https://github.com/sharin-io/COS30045/blob/b3fecf00cb06297af6ba6a1b58144ae75172b3e8/lab_work/Lab%201.1/lab1.1.html">Lab
+            1.1</a></li>
+        <a class="menu-button"
+            href="https://github.com/sharin-io/COS30045/blob/b3fecf00cb06297af6ba6a1b58144ae75172b3e8/lab_work/Lab%201.2/lab1.2.html">Lab
+            1.2</a></li>
+        <a class="menu-button"
+            href="https://github.com/sharin-io/COS30045/blob/b3fecf00cb06297af6ba6a1b58144ae75172b3e8/lab_work/Lab%201.3/lab1.3.html">Lab
+            1.3</a></li>
+    </nav>
 </head>
 
 <body>
-    <h1 id="labno">LAB 1.2 JavaScript</h1>
+
+    <!-- Heading Level -->
+    <h1><a href="#">LAB 1.1 HTML and CSS Review</a></h1>
+
     <h1>Title of Article about pet ownership during the COVID Pandemic</h1>
     <h2>Author: Shin Thant Thi Ri </h2>
 
+    <!-- Paragraph -->
     <p>The COVID-19 pandemic not only reshaped daily life but also significantly influenced pet ownership trends in
-        Australia. As more people spent time at home, the desire for companionship led to a noticeable increase in pet
-        ownership across various types, particularly <strong><em>dogs</em></strong> and <strong><em>cats</em></strong>.
+        Australia. As more people spent time at home, the desire for companionship led to a noticeable increase in
+        pet
+        ownership across various types, particularly <strong><em>dogs</em></strong> and
+        <strong><em>cats</em></strong>.
         This shift is
         clearly reflected in the data, which
         shows a rise in the percentage of households with pets, as well as an overall increase in the total pet
         population. Many found comfort in their new furry friends, creating bonds that became <strong>a source of
             emotional
-            support</strong> during the pandemic. The trend also highlights the growing importance of pets in Australian
+            support</strong> during the pandemic. The trend also highlights the growing importance of pets in
+        Australian
         households,
-        not just as animals but as integral members of the family. This article explores how the pandemic fueled this
+        not just as animals but as integral members of the family. This article explores how the pandemic fueled
+        this
         surge in pet ownership, the benefits and challenges that came with it, and the lasting impact on Australian
-        households.</p>
+        households.
+    </p>
 
     <h4>Here are some of the key aspects of pet ownership during the pandemic:</h4>
-    <ul>
+
+    <!-- Ordered List -->
+    <ol type="1">
         <li>Mental health boost: Pets offered emotional support and reduced loneliness.</li>
         <li>More exercise: Regular walks and playtime kept people active.</li>
         <li>Financial impact: Pet care expenses became a new budget item.</li>
         <li>Routine adjustments: Managing work and pet care required new time management strategies.</li>
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
-    </ul>
-<<<<<<< HEAD
-    <figure></figure>
-    <img src="images/pet_ownershiptable.png" width="500" height="300"
-        alt="Comparison of pet ownership in 2019 and 2021.">
-=======
+    </ol>
+    <!-- image with appropriate alt text -->
     <figure>
-        <img src="images/pet_ownershiptable.png" width="500" height="300"
+        <img src="images/pet_ownership.png" width="1000" height="500"
             alt="Comparison of pet ownership in 2019 and 2021.">
->>>>>>> 2522685e260586b03fc6fbee184da785e50efb29
     </figure>
 
     <figcaption id="caption_chart">
@@ -60,17 +76,17 @@
     </figcaption>
 
     <p>In summary, the COVID-19 pandemic left an indelible mark on pet ownership. The companionship and comfort pets
-        provided during a time of unprecedented isolation offered much-needed emotional support to many. However, this
+        provided during a time of unprecedented isolation offered much-needed emotional support to many. However,
+        this
         surge in pet ownership also brought with it new challenges, from financial considerations to the
-        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these animals
-        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis. These
+        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these
+        animals
+        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis.
+        These
         connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
-<<<<<<< HEAD
-        circumstances.
     </p>
-=======
-        circumstances.</p>
->>>>>>> 2522685e260586b03fc6fbee184da785e50efb29
+
+    <!-- Footer -->
     <footer>
         <p>COS30045 Data Visualization</p>
         <p>Authored by SHIN THANT THI RI | <a
