--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -12,22 +12,21 @@
     <link rel="stylesheet" href="lab1.1.css">
     <nav id="nav-block">
         <a class="menu-button"
-            href="https://github.com/sharin-io/COS30045/blob/b3fecf00cb06297af6ba6a1b58144ae75172b3e8/lab_work/Lab%201.1/lab1.1.html">Lab
-            1.1</a></li>
+            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.1/lab1.1.html">Lab
+            1.1</a>
         <a class="menu-button"
-            href="https://github.com/sharin-io/COS30045/blob/b3fecf00cb06297af6ba6a1b58144ae75172b3e8/lab_work/Lab%201.2/lab1.2.html">Lab
-            1.2</a></li>
+            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.2/lab1.2.html">Lab
+            1.2</a>
         <a class="menu-button"
-            href="https://github.com/sharin-io/COS30045/blob/b3fecf00cb06297af6ba6a1b58144ae75172b3e8/lab_work/Lab%201.3/lab1.3.html">Lab
-            1.3</a></li>
+            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.3/lab1.3.html">Lab
+            1.3</a>
     </nav>
 </head>
 
 <body>
 
     <!-- Heading Level -->
-    <h1><a href="#">LAB 1.1 HTML and CSS Review</a></h1>
-
+    <h1>LAB 1.1 HTML and CSS Review</a></h1>
     <h1>Title of Article about pet ownership during the COVID Pandemic</h1>
     <h2>Author: Shin Thant Thi Ri </h2>
 
@@ -61,6 +60,23 @@
         <li>Routine adjustments: Managing work and pet care required new time management strategies.</li>
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
     </ol>
+    <h3> Demo Question: Add table containing pet pictures with appropriate label. </h3>
+    <section class="gallery">
+        <figure>
+            <img src="images/cat.jpg" alt="This is cat image">
+            <figcaption>This is an image of a cat.</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/dog.png" alt="This is dog image">
+            <figcaption>This is an image of a dog.</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/fish.jpg" alt="This is fish image">
+            <figcaption>This is an image of a fish.</figcaption>
+        </figure>
+    </section>
     <!-- image with appropriate alt text -->
     <figure>
         <img src="images/pet_ownership.png" width="1000" height="500"
