--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -4,7 +4,7 @@
 <head>
     <title>LAB 1.1 HTML and CSS Review</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="LAB 1.2 JavaScript" />
+    <meta name="description" content="LAB 1.1 HTML and CSS Review" />
     <meta name="author" content="SHIN THANT THI RI">
     <meta name="keywords" content="HTML, CSS" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,15 +51,22 @@
     </p>
 
     <h4>Here are some of the key aspects of pet ownership during the pandemic:</h4>
-
-    <!-- Ordered List -->
-    <ol type="1">
+    <!-- Unordered List -->
+    <ul>
         <li>Mental health boost: Pets offered emotional support and reduced loneliness.</li>
         <li>More exercise: Regular walks and playtime kept people active.</li>
         <li>Financial impact: Pet care expenses became a new budget item.</li>
         <li>Routine adjustments: Managing work and pet care required new time management strategies.</li>
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
+    </ul>
+    <h4>Pets had a number of positive influences on their lives such as:</h4>
+    <!-- Ordered List -->
+    <ol type="1">
+        <li>companionship</li>
+        <li>better mental health</li>
+        <li>joy and happiness.</li>
     </ol>
+    <!-- image with appropriate alt text -->
     <h3> Demo Question: Add table containing pet pictures with appropriate label. </h3>
     <section class="gallery">
         <figure>
@@ -77,7 +84,6 @@
             <figcaption>This is an image of a fish.</figcaption>
         </figure>
     </section>
-    <!-- image with appropriate alt text -->
     <figure>
         <img src="images/pet_ownership.png" width="1000" height="500"
             alt="Comparison of pet ownership in 2019 and 2021.">
@@ -91,15 +97,11 @@
             Animal Medicines Australia Report 2021</a>
     </figcaption>
 
-    <p>In summary, the COVID-19 pandemic left an indelible mark on pet ownership. The companionship and comfort pets
-        provided during a time of unprecedented isolation offered much-needed emotional support to many. However,
-        this
-        surge in pet ownership also brought with it new challenges, from financial considerations to the
-        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these
-        animals
-        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis.
-        These
-        connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
+    <p>
+        With the increase in pet ownership the AMA are encouraging policy makers to consider the needs of companion
+        animals and their owners when considering rental, strata and body corporate regulations are well as
+        accepting
+        animals in public places and transport.
     </p>
 
     <!-- Footer -->
