--- a/lab_work/Lab1.2/lab1.2.html
+++ b/lab_work/Lab1.2/lab1.2.html
@@ -11,13 +11,13 @@
 
     <link rel="stylesheet" href="lab1.2.css">
     <nav id="nav-block">
-        <a class="menu-button"
+        <a
             href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.1/lab1.1.html">Lab
             1.1</a>
-        <a class="menu-button"
+        <a
             href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.2/lab1.2.html">Lab
             1.2</a>
-        <a class="menu-button"
+        <a
             href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.3/lab1.3.html">Lab
             1.3</a>
     </nav>
@@ -45,14 +45,22 @@
         households.</p>
 
     <h4>Here are some of the key aspects of pet ownership during the pandemic:</h4>
-    <!-- Ordered List -->
-    <ol type="1">
+    <!-- Unordered List -->
+    <ul>
         <li>Mental health boost: Pets offered emotional support and reduced loneliness.</li>
         <li>More exercise: Regular walks and playtime kept people active.</li>
         <li>Financial impact: Pet care expenses became a new budget item.</li>
         <li>Routine adjustments: Managing work and pet care required new time management strategies.</li>
         <li>Long-term responsibility: Pandemic pets became a lasting commitment.</li>
+    </ul>
+    <h4>Pets had a number of positive influences on their lives such as:</h4>
+    <!-- Ordered List -->
+    <ol type="1">
+        <li>companionship</li>
+        <li>better mental health</li>
+        <li>joy and happiness.</li>
     </ol>
+    <!-- Figure -->
     <p>
         <button class="button1"
             onclick="show('images/2019.png', 'Fig 1. Percent of most popular pets owned by Australians in 2019', '2019')">2019</button>
@@ -73,14 +81,12 @@
             document.getElementById('ChartImg').style.display = 'block';
         }
     </script>
-    <p>In summary, the COVID-19 pandemic left an indelible mark on pet ownership. The companionship and comfort pets
-        provided during a time of unprecedented isolation offered much-needed emotional support to many. However, this
-        surge in pet ownership also brought with it new challenges, from financial considerations to the
-        responsibilities of long-term care. As society transitions back to normalcy, the bonds forged with these animals
-        will likely remain strong, highlighting the profound impact pets had on our lives during a time of crisis. These
-        connections serve as a testament to the resilience and joy that pets can bring, even in the most difficult
-        circumstances.
+    <p>
+        With the increase in pet ownership the AMA are encouraging policy makers to consider the needs of companion
+        animals and their owners when considering rental, strata and body corporate regulations are well as accepting
+        animals in public places and transport.
     </p>
+    <!-- Footer -->
     <footer>
         <p>COS30045 Data Visualization</p>
         <p>Authored by SHIN THANT THI RI | <a
