--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -11,14 +11,11 @@
 
     <link rel="stylesheet" href="lab1.1.css">
     <nav id="nav-block">
-        <a class="menu-button"
-            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.1/lab1.1.html">Lab
+        <a class="menu-button" href="lab1.1.html">Lab
             1.1</a>
-        <a class="menu-button"
-            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.2/lab1.2.html">Lab
+        <a class="menu-button" href="../Lab1.2/lab1.2.html">Lab
             1.2</a>
-        <a class="menu-button"
-            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.3/lab1.3.html">Lab
+        <a class="menu-button" href="../Lab1.2/lab1.2.html">Lab
             1.3</a>
     </nav>
 </head>
