--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -4,23 +4,23 @@
 <head>
     <title>LAB 1.1 HTML and CSS Review</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="LAB 1.1 HTML and CSS Review" />
     <meta name="author" content="SHIN THANT THI RI">
+    <meta name="description" content="LAB 1.1 HTML and CSS Review" />
     <meta name="keywords" content="HTML, CSS" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="lab1.1.css">
-    <nav id="nav-block">
-        <a class="menu-button" href="lab1.1.html">Lab
-            1.1</a>
-        <a class="menu-button" href="../Lab1.2/lab1.2.html">Lab
-            1.2</a>
-        <a class="menu-button" href="../Lab1.2/lab1.2.html">Lab
-            1.3</a>
-    </nav>
 </head>
 
 <body>
+    <!-- Navigation Menu -->
+    <nav id="nav-block">
+        <a href="../Lab1.1/lab1.1.html">Lab 1.1</a>
+        <a href="../Lab1.2/lab1.2.html">Lab 1.2</a>
+        <a href="../Lab1.3/lab1.3.html">Lab 1.3</a>
+        <a href="../Lab1.4/lab2.1.html">Lab 2.2</a>
+        <a href="../Lab1.4/lab2.2.html">Lab 2.2</a>
+    </nav>
 
     <!-- Heading Level -->
     <h1>LAB 1.1 HTML and CSS Review</a></h1>
@@ -100,15 +100,12 @@
         accepting
         animals in public places and transport.
     </p>
-
-    <!-- Footer -->
-    <footer>
-        <p>COS30045 Data Visualization</p>
-        <p>Authored by SHIN THANT THI RI | <a
-                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
-        </p>
-    </footer>
-
 </body>
+<!-- Footer -->
+<footer>
+    <p>COS30045 Data Visualization</p>
+    <p>Authored by SHIN THANT THI RI | <a href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
+    </p>
+</footer>
 
 </html>
