--- a/lab_work/Lab1.2/lab1.2.html
+++ b/lab_work/Lab1.2/lab1.2.html
@@ -2,28 +2,26 @@
 <html lang="en">
 
 <head>
-    <title>LAB 1.1 HTML and CSS Review</title>
+    <title>LAB 1.2 JavaScript</title>
     <meta charset="UTF-8" />
     <meta name="description" content="LAB 1.2 JavaScript" />
     <meta name="author" content="SHIN THANT THI RI">
-    <meta name="keywords" content="HTML, CSS" />
+    <meta name="keywords" content="JavaScript" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="lab1.2.css">
-    <nav id="nav-block">
-        <a
-            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.1/lab1.1.html">Lab
-            1.1</a>
-        <a
-            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.2/lab1.2.html">Lab
-            1.2</a>
-        <a
-            href="https://htmlpreview.github.io/?https://github.com/sharin-io/COS30045/blob/91825ff94431ac0ef34275153c417f3c41247c6b/lab_work/Lab1.3/lab1.3.html">Lab
-            1.3</a>
-    </nav>
 </head>
 
 <body>
+    <!-- Navigation Menu -->
+    <nav id="nav-block">
+        <a href="../Lab1.1/lab1.1.html">Lab 1.1</a>
+        <a href="../Lab1.2/lab1.2.html">Lab 1.2</a>
+        <a href="../Lab1.3/lab1.3.html">Lab 1.3</a>
+        <a href="../Lab1.4/lab2.1.html">Lab 2.2</a>
+        <a href="../Lab1.4/lab2.2.html">Lab 2.2</a>
+    </nav>
+
     <!-- Heading Level -->
     <h1 id="labno">LAB 1.2 JavaScript</h1>
     <h1>Title of Article about pet ownership during the COVID Pandemic</h1>
@@ -86,14 +84,12 @@
         animals and their owners when considering rental, strata and body corporate regulations are well as accepting
         animals in public places and transport.
     </p>
-    <!-- Footer -->
-    <footer>
-        <p>COS30045 Data Visualization</p>
-        <p>Authored by SHIN THANT THI RI | <a
-                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
-        </p>
-    </footer>
-
 </body>
+<!-- Footer -->
+<footer>
+    <p>COS30045 Data Visualization</p>
+    <p>Authored by SHIN THANT THI RI | <a href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
+    </p>
+</footer>
 
 </html>
