--- a/lab_work/script/menu.html
+++ b/lab_work/script/menu.html
@@ -24,18 +24,19 @@
             <article class="card">
                 <img src="../Lab1.1/images/pet_ownership.png" alt="Lab 1.1 Content">
                 <h3>Lab 1.1</h3>
-                <button onclick="window.location.href='../Lab1.1/lab1.1.html'">VIEW</button>
+                <button onclick="href='../Lab1.1/lab1.1.html'">VIEW</button>
             </article>
 
             <!-- Card 2 -->
             <article class="card">
                 <img src="../Lab1.2/images/Both.png" alt="Lab 1.2 Content">
                 <h3>Lab 1.2</h3>
-                <button onclick="window.location.href='../Lab1.2/lab1.2.html'">VIEW</button>
+                <button onclick="href='../Lab1.2/lab1.2.html'">VIEW</button>
             </article>
         </section>
     </section>
 </body>
+
 <!-- Footer -->
 <footer>
     <p>COS30045 Data Visualization</p>
