update lab1.1.html, lab1.2.html and menu.html

--- a/lab_work/Lab1.2/lab1.2.html
+++ b/lab_work/Lab1.2/lab1.2.html
@@ -84,12 +84,13 @@
         animals and their owners when considering rental, strata and body corporate regulations are well as accepting
         animals in public places and transport.
     </p>
+    <!-- Footer -->
+    <footer>
+        <p>COS30045 Data Visualization</p>
+        <p>Authored by SHIN THANT THI RI | <a
+                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
+        </p>
+    </footer>
 </body>
-<!-- Footer -->
-<footer>
-    <p>COS30045 Data Visualization</p>
-    <p>Authored by SHIN THANT THI RI | <a href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
-    </p>
-</footer>
 
 </html>
