--- a/lab_work/Lab1.1/lab1.1.html
+++ b/lab_work/Lab1.1/lab1.1.html
@@ -100,12 +100,13 @@
         accepting
         animals in public places and transport.
     </p>
+    <!-- Footer -->
+    <footer>
+        <p>COS30045 Data Visualization</p>
+        <p>Authored by SHIN THANT THI RI | <a
+                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
+        </p>
+    </footer>
 </body>
-<!-- Footer -->
-<footer>
-    <p>COS30045 Data Visualization</p>
-    <p>Authored by SHIN THANT THI RI | <a href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
-    </p>
-</footer>
 
 </html>
