--- a/lab_work/script/menu.html
+++ b/lab_work/script/menu.html
@@ -35,13 +35,14 @@
             </article>
         </section>
     </section>
+    <!-- Footer -->
+    <footer>
+        <p>COS30045 Data Visualization</p>
+        <p>Authored by SHIN THANT THI RI | <a
+                href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
+        </p>
+    </footer>
 </body>
 
-<!-- Footer -->
-<footer>
-    <p>COS30045 Data Visualization</p>
-    <p>Authored by SHIN THANT THI RI | <a href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
-    </p>
-</footer>
 
 </html>
