--- a/lab_work/script/menu.html
+++ b/lab_work/script/menu.html
@@ -24,25 +24,25 @@
             <article class="card">
                 <img src="../Lab1.1/images/pet_ownership.png" alt="Lab 1.1 Content">
                 <h3>Lab 1.1</h3>
-                <button onclick="href='../Lab1.1/lab1.1.html'">VIEW</button>
+                <button onclick="window.location.href='../Lab1.1/lab1.1.html'">VIEW</button>
             </article>
 
             <!-- Card 2 -->
             <article class="card">
                 <img src="../Lab1.2/images/Both.png" alt="Lab 1.2 Content">
                 <h3>Lab 1.2</h3>
-                <button onclick="href='../Lab1.2/lab1.2.html'">VIEW</button>
+                <button onclick="window.location.href='../Lab1.2/lab1.2.html'">VIEW</button>
             </article>
         </section>
     </section>
+
     <!-- Footer -->
     <footer>
-        <p>COS30045 Data Visualization</p>
+        <p>COS30045 Data Visualisation</p>
         <p>Authored by SHIN THANT THI RI | <a
                 href="mailto:104842811@student.swin.edu.au">104842811@student.swin.edu.au</a>
         </p>
     </footer>
 </body>
-
 
 </html>
